Fixed text sizing and named iframe to a real class

--- a/Pages/Calendar.html
+++ b/Pages/Calendar.html
@@ -9,7 +9,9 @@
 <body>
 	<header>
 		<div class="container">
-			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg"></a>
+			<a href="../index.html">
+				<img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg">
+			</a>
       <nav>
         <ul>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
