--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
   <header>
-    <div class="container">
-      <a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg"></a>
+    <div class="container" name="viewport" content="initial-scale=1">
+      <a href="../index.html"><img alt="NexGen Logo" class="logo" src="./images/nexgenLogo1.jpg"></a>
       <nav>
         <ul>
-          <li><a href="../Pages/OurTeam.html">Our Team</a></li>
-          <li><a href="../Pages/About.html">About</a></li>
-          <li><a href="../Pages/Sponsors.html">Sponsors</a></li>
-          <li><a href="../Pages/Calendar.html">Calender</a></li>
+          <li><a href="./Pages/OurTeam.html">Our Team</a></li>
+          <li><a href="./Pages/About.html">About</a></li>
+          <li><a href="./Pages/Sponsors.html">Sponsors</a></li>
+          <li><a href="./Pages/Calendar.html">Calender</a></li>
           <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
         </ul>
       </nav>
@@ -30,7 +30,14 @@
 
   <div class="top">
 
-    <iframe width="800" height="450" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+    <iframe
+      class="video"
+      width="800"
+      height="450"
+      src="https://www.youtube.com/embed/HZbdwYiCY74"
+      frameborder="0"
+      allow="autoplay; encrypted-media">
+    </iframe>
 
     <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
     <br>
