--- a/Pages/Calendar.html
+++ b/Pages/Calendar.html
@@ -22,6 +22,6 @@
         </ul>
       </nav>
 		</div>
-	</header><iframe frameborder="0" height="690" scrolling="no" src="https://calendar.google.com/calendar/embed?src=terrypalmer%40dvhsrobotics.org&ctz=America%2FLos_Angeles" style="border: 0" width="100%"></iframe>
+	</header><iframe src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
