Proper about video class

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -6,6 +6,7 @@
 	<link href="../index.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
+
 <body>
 	<header>
 		<div class="container">
@@ -21,8 +22,17 @@
       </nav>
 		</div>
 	</header>
+  
 	<div class="top">
-		<iframe allowfullscreen frameborder="0" height="450" src="https://www.youtube.com/embed/MM_JWAON6PI?rel=0&amp;showinfo=0" width="800"></iframe>
+    
+    <iframe
+      class="video"
+      width="800"
+      height="450"
+      src="https://www.youtube.com/embed/MM_JWAON6PI?rel=0&amp;showinfo=0"
+      frameborder="0"
+      allow="autoplay; encrypted-media">
+    </iframe>
 
 		<h1>"I can either watch it happen or be part of it." -Elon Musk</h1><br>
 		<h3><!-- What is this supposed to be? -->
