--- a/Pages/Calendar.html
+++ b/Pages/Calendar.html
@@ -22,6 +22,18 @@
         </ul>
       </nav>
 		</div>
-	</header><iframe src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+	</header>
+  
+  <div class="top">
+    <iframe
+      class="image"
+      src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&ctz=America%2FLos_Angeles"
+      style="border: 0"
+      width="1600"
+      height="650"
+      frameborder="0"
+      scrolling="no">
+    </iframe>
+</div>
 </body>
 </html>
