Remove multiple br for image style

--- a/Pages/OurTeam.html
+++ b/Pages/OurTeam.html
@@ -22,12 +22,8 @@
 		</div>
 	</header>
 	<div class="top">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-		<img height="450" src="../images/OurTeam.jpg"><br>
+    
+		<img class="image" height="450" src="../images/OurTeam.jpg"><br>
 		<br>
 		<br>
 		<table align="center" border="0" cellpadding="1" cellspacing="10" width="80%">
