Reduced index.js redundancy; Reflected changes in index.html

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 	  frameborder="0"
 	  allow="autoplay; encrypted-media">
 	</iframe>
-	<img src="images/Gear_Button.png" class="Button" onclick="buttonPress(0)">
-	<img src="images/Gear_Button.png" class="Button" onclick="buttonPress(1)">
-	<img src="images/Gear_Button.png" class="Button" onclick="buttonPress(2)">
-	<div class="Arrow" onclick="buttonPress(q+1)">&#10095;</div>
-	<div class="Arrow" style="left:0%;margin-left:5px;" onclick="buttonPress(q-1)">&#10094;</div>
+	<img src="images/Gear_Button.png" class="Button" onclick="showSlide(0)">
+	<img src="images/Gear_Button.png" class="Button" onclick="showSlide(1)">
+	<img src="images/Gear_Button.png" class="Button" onclick="showSlide(2)">
+	<div class="Arrow" onclick="showSlide(q+1)">&#10095;</div>
+	<div class="Arrow" style="left:0%;margin-left:5px;" onclick="showSlide(q-1)">&#10094;</div>
       </div>
     </div>
     
