Centering slideshow for smaller viewports; Removed unneeded CSS code

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	    <a href="https://www.firstinspires.org/robotics/frc">First Robotics Competition</a>
 	    held at UC Davis at the end of the year.
             Through our club, students are also introduced to possible career choices in STEM, such as computer science and engineering.
-            We will put our absolute best effort into climbing the ranks in the UC Davis competition and other competitions in the future.
+            We will put our absolute best effort into climbing the ranks at the UC Davis competition and other competitions in the future.
             NexGen will strive for success and NexGen will work to be the best of the Next Generation.
           </h3>
         </td>
