Removed my News page(No use was decided on it) Started making the website look 'pretty"

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -12,6 +12,7 @@
 			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg"></a>
       <nav>
         <ul>
+					<li><a href="../index.html">Home</a></li>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
           <li><a href="../Pages/About.html">About</a></li>
           <li><a href="../Pages/Sponsors.html">Sponsors</a></li>
@@ -21,9 +22,9 @@
       </nav>
 		</div>
 	</header>
-  
+
 	<div class="top">
-    
+
     <iframe
       class="video"
       width="800"
