--- a/Pages/Calendar.html
+++ b/Pages/Calendar.html
@@ -13,6 +13,7 @@
 			</a>
       <nav>
         <ul>
+					<li><a href="../index.html">Home</a></li>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
           <li><a href="../Pages/About.html">About</a></li>
           <li><a href="../Pages/Sponsors.html">Sponsors</a></li>
@@ -22,14 +23,14 @@
       </nav>
 		</div>
 	</header>
-  
+
   <div class="top">
     <iframe
       class="image"
       src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&ctz=America%2FLos_Angeles"
       style="border: 0"
-      width="1600"
-      height="650"
+      width=95%
+      height=550vw
       frameborder="0"
       scrolling="no">
     </iframe>
