--- a/Pages/OurTeam.html
+++ b/Pages/OurTeam.html
@@ -11,6 +11,7 @@
 			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg"></a>
       <nav>
         <ul>
+					<li><a href="../index.html">Home</a></li>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
           <li><a href="../Pages/About.html">About</a></li>
           <li><a href="../Pages/Sponsors.html">Sponsors</a></li>
@@ -21,7 +22,7 @@
 		</div>
 	</header>
 	<div class="top">
-    
+
 		<img class="image" height="450" src="../images/OurTeam.jpg"><br>
 		<br>
 		<br>
