--- a/Pages/Sponsors.html
+++ b/Pages/Sponsors.html
@@ -11,6 +11,7 @@
 			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg"></a>
       <nav>
         <ul>
+					<li><a href="../index.html">Home</a></li>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
           <li><a href="../Pages/About.html">About</a></li>
           <li><a href="../Pages/Sponsors.html">Sponsors</a></li>
@@ -21,9 +22,6 @@
 		</div>
 	</header>
 	<div class="container">
-		<br>
-		<br>
-		<br>
 		<h1>Thank you to our sponsors!</h1>
 	</div>
 </body>
