--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="../index.html"><img alt="NexGen Logo" class="logo" src="./images/nexgenLogo1.jpg"></a>
       <nav>
         <ul>
+          <li><a href="">Home</a></li>
           <li><a href="./Pages/OurTeam.html">Our Team</a></li>
           <li><a href="./Pages/About.html">About</a></li>
           <li><a href="./Pages/Sponsors.html">Sponsors</a></li>
