Added Home button to nav bar and added a background for "prettiness"

--- a/Pages/Sponsors.html
+++ b/Pages/Sponsors.html
@@ -21,7 +21,7 @@
       </nav>
 		</div>
 	</header>
-	<div class="container">
+	<div class="top-text">
 		<h1>Thank you to our sponsors!</h1>
 	</div>
 </body>
