--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
       allow="autoplay; encrypted-media">
     </iframe>
 
-    <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
-    <br>
-    <table border="0" style="text-align:justify" width="95%" align="center">
-      <tr>
+    <h1 class="top-text">"I can either watch it happen or be a part of it." -Elon Musk</h1>
+    <table class="top-text" border="0" style="text-align:justify" width="95%" align="center">
         <td>
           <h3>
             We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics.
@@ -52,7 +50,6 @@
             NexGen will strive for success and NexGen will work to be the best of the Next Generation.
           </h3>
         </td>
-      </tr>
     </table>
 
   </div>
