--- a/Pages/OurTeam.html
+++ b/Pages/OurTeam.html
@@ -26,7 +26,7 @@
 		<img class="image" height="450" src="../images/OurTeam.jpg"><br>
 		<br>
 		<br>
-		<table align="center" border="0" cellpadding="1" cellspacing="10" width="80%">
+		<table class="top-text" align="center" border="0" cellpadding="1" cellspacing="10" width="80%">
 			<tr>
 				<td>Aaron D. Orellana [A]: I [B]: VI</td>
 				<td>Jamie Bulanon</td>
