Complete theme change

--- a/index.html
+++ b/index.html
@@ -39,19 +39,7 @@
       allow="autoplay; encrypted-media">
     </iframe>
 
-    <h1 class="top-text">"I can either watch it happen or be a part of it." -Elon Musk</h1>
-    <table class="top-text" border="0" style="text-align:justify" width="95%" align="center">
-        <td>
-          <h3>
-            We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics.
-            students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the First Robotics Competition held at UC Davis at the end of the year.
-            Through our club, students are also introduced to possible career choices in STEM, such as computer science and engineering.
-            We will work our absolute best to am climb the ranks in the UC Davis competition and competitions in the future.
-            NexGen will strive for success and NexGen will work to be the best of the Next Generation.
-          </h3>
-        </td>
-    </table>
-
+    <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
   </div>
 </body>
 
