--- a/Pages/Calendar.html
+++ b/Pages/Calendar.html
@@ -8,9 +8,7 @@
 <body>
 	<header>
 		<div class="container">
-			<a href="../index.html">
-				<img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg">
-			</a>
+			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/banner-trans.png"></a>
       <nav>
         <ul>
 					<li><a href="../index.html">Home</a></li>
@@ -29,8 +27,8 @@
       class="image"
       src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&ctz=America%2FLos_Angeles"
       style="border: 0"
-      width=95%
-      height=550vw
+      width="95%"
+      height="550vw"
       frameborder="0"
       scrolling="no">
     </iframe>
