--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" type="images/png" href="images/logo_2.png">
+  <link rel="shortcut icon" type="images/png" href="images/logo.png">
   <title>NexGenRobotics</title>
   <link rel="stylesheet" type="text/css" href="index.css">
   <meta name="theme-color" content="#00C9BF">
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="container" name="viewport" content="initial-scale=1">
-      <a href="../index.html"><img alt="NexGen Logo" class="logo" src="./images/nexgenLogo1.jpg"></a>
+      <a href="../index.html"><img alt="NexGen Logo" class="logo" src="./images/banner-trans.png"></a>
       <nav>
         <ul>
           <li><a href="">Home</a></li>
