--- a/Pages/Sponsors.html
+++ b/Pages/Sponsors.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<div class="container">
-			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg"></a>
+			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/banner-trans.png"></a>
       <nav>
         <ul>
 					<li><a href="../index.html">Home</a></li>
