--- a/Pages/OurTeam.html
+++ b/Pages/OurTeam.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="../images/logo_2.png" rel="shortcut icon" type="images/png">
+	<link rel="shortcut icon" type="images/png" href="../images/logo.png">
 	<title>NexGenRobotics</title>
 	<link href="../index.css" rel="stylesheet" type="text/css">
 </head>
