MDI play/pause, fix next/prev

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <!-- GSuite Verification. DO NOT DELETE!!! -->
   <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
+  <link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -53,18 +54,14 @@
 	<img src="images/Gear_Button.png" class="Button" onclick="showSlide(2)">
 
 	<!-- Play/Pause Button -->
-	<div class="PlayState" style="cursor:pointer" onclick="togglePlayState()">| |</div>
+	<div class="PlayState" style="cursor:pointer" onclick="togglePlayState()"><i class="mdi mdi-pause-circle mdi-24px"></i></div>
 
 	<!-- Transition arrows -->
 	<div class="arrowBox" onclick="showSlide(q+1)">
-	  <div class="Arrow">
-	    &#10095;
-	  </div>
+	  <div class="Arrow">&#10095;</div>
 	</div>
 	<div class="arrowBox" style="left:0%;" onclick="showSlide(q-1)">
-	  <div class="Arrow">
-	    &#10094;
-	  </div>
+	  <div class="Arrow">&#10094;</div>
 	</div>
 	
       </div>
