--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
 	<div class="PlayState" style="cursor:pointer" onclick="togglePlayState()"><i class="mdi mdi-pause-circle mdi-24px"></i></div>
 
 	<!-- Transition arrows -->
-	<div class="arrowBox" onclick="showSlide(q+1)">
-	  <div class="Arrow">&#10095;</div>
-	</div>
 	<div class="arrowBox" style="left:0%;" onclick="showSlide(q-1)">
-	  <div class="Arrow">&#10094;</div>
+	  <div class="Arrow mdi mdi-chevron-left mdi-36px"></div>
+	</div>
+  
+	<div class="arrowBox" onclick="showSlide(q+1)">
+	  <div class="Arrow mdi mdi-chevron-right mdi-36px"></div>
 	</div>
 	
-      </div>
+    </div>
     </div>
     
     <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
