Change icon to MDI icon

--- a/redesign/index.html
+++ b/redesign/index.html
@@ -21,11 +21,6 @@
       :root {
         --mdc-theme-primary: #26A69A;
       }
-
-      #greeting-form>button {
-        margin-top: 8px;
-      }
-
     </style>
 
     <!-- Custom CSS -->
@@ -69,7 +64,7 @@
     <header class="mdc-toolbar mdc-toolbar--fixed">
       <div class="mdc-toolbar__row">
         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-          <a href="#" class="material-icons mdc-toolbar__menu-icon">menu</a>
+          <a href="#" class="mdi mdi-24px mdi-menu mdc-toolbar__menu-icon"></a>
           <span class="mdc-toolbar__title">DVHS Robotics</span>
         </section>
       </div>
