Slideshow arrows work -- fixed centering for old unicode arrows but not new meterial design ones

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	  <div class="Arrow">&#10094;</div>
 	</div>  
 	<div class="arrowBox" onmouseover="setArrows(1,1)" onmouseout="setArrows(1,0)" onclick="showSlide(q+1)">
-	  <div class="Arrow mdi mdi-chevron-right mdi-36px"></div>
+	  <i class="Arrow mdi mdi-chevron-right mdi-36px"></i>
 	</div>
 	
     </div>
