Slideshow material design arrows work

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 	<!-- Transition arrows -->
 	<div class="arrowBox" style="left:0%;"
 	     onmouseover="setArrows(0,1)" onmouseout="setArrows(0,0)" onclick="showSlide(q-1)">
-	  <div class="Arrow">&#10094;</div>
+	  <i class="Arrow  mdi mdi-chevron-left"></i>
 	</div>  
 	<div class="arrowBox" onmouseover="setArrows(1,1)" onmouseout="setArrows(1,0)" onclick="showSlide(q+1)">
-	  <i class="Arrow mdi mdi-chevron-right mdi-36px"></i>
+	  <i class="Arrow mdi mdi-chevron-right"></i>
 	</div>
 	
     </div>
