moved paragraph from index to About

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -37,9 +37,11 @@
 		<h1 class="top-text">"I can either watch it happen or be part of it." -Elon Musk</h1><br>
 		<h3 class="top-text">
 			We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics.
-			students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the First Robotics Competition held at UC Davis at the end of the year.
+			Students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the
+<a href="https://www.firstinspires.org/robotics/frc">First Robotics Competition</a>
+held at UC Davis at the end of the year.
 			Through our club, students are also introduced to possible career choices in STEM, such as computer science and engineering.
-			We will work our absolute best to am climb the ranks in the UC Davis competition and competitions in the future.
+			We will put our absolute best effort into climbing the ranks at the UC Davis competition and other competitions in the future.
 			NexGen will strive for success and NexGen will work to be the best of the Next Generation.
 		</h3>
 	</div>
