Landing page + Calender

--- a/index.html
+++ b/index.html
@@ -35,23 +35,31 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Our Team</a>
+                    <a class="nav-link" href="pages/team.html">Our Team</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sponsors</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="pages/calender.html">Calender</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Calender</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Donate</a>
+                    <button type="button" class="btn btn-sm btn-yellow"><a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics"><i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a></button>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <!-- Light Body -->
+    <div class="container-fluid body-light">
+        <!-- Jumbotron -->
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="h1-responsive card-title mb-3">NexGen Robotics</h1>
+                <p class="lead">We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics. Students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the First Robotics Competition held at UC Davis at the end of the year. Through our club, students are also introduced to possible career choices in STEM, such as computer science and engineering. We will put our absolute best effort into climbing the ranks at the UC Davis competition and other competitions in the future. NexGen will strive for success and NexGen will work to be the best of the Next Generation.</p>
+            </div>
+        </div>
+    </div>
 
     <!-- Light Body -->
     <div class="container-fluid body-light">
@@ -84,6 +92,7 @@
             <div class="col"></div>
         </div>
     </div>
+
 
 
 
