redid home page, started sponsors page,

--- a/index.html
+++ b/index.html
@@ -32,19 +32,22 @@
         <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/team.html">Our Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sponsors</a>
+                    <a class="nav-link" href="pages/sponsors.html">Sponsors</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/calender.html">Calender</a>
+                    <a class="nav-link" href="pages/calendar.html">Calendar</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-sm btn-yellow"><a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics"><i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a></button>
+                    <button type="button" class="btn btn-sm btn-yellow">
+                        <a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics">
+                            <i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -56,7 +59,16 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="h1-responsive card-title mb-3">NexGen Robotics</h1>
-                <p class="lead">We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics. Students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the First Robotics Competition held at UC Davis at the end of the year. Through our club, students are also introduced to possible career choices in STEM, such as computer science and engineering. We will put our absolute best effort into climbing the ranks at the UC Davis competition and other competitions in the future. NexGen will strive for success and NexGen will work to be the best of the Next Generation.</p>
+                <p class="lead">We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics. Students
+                    get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the
+                    First Robotics Competition held at UC Davis at the end of the year. Through our club, students are also
+                    introduced to possible career choices in STEM, such as computer science and engineering. We will put
+                    our absolute best effort into climbing the ranks at the UC Davis competition and other competitions in
+                    the future. NexGen will strive for success and NexGen will work to be the best of the Next Generation.</p>
+                <button class="btn btn-primary btn-rounded">
+                    <a href="#competitions">
+                        <i class="fa fa-chevron-down" aria-hidden="true"></i> See Our Robots</a>
+                </button>
             </div>
         </div>
     </div>
@@ -91,6 +103,49 @@
             </div>
             <div class="col"></div>
         </div>
+    </div>
+
+
+    <!-- Body Dark -->
+    <!-- FRC Competition Cards -->
+    <div class="container-fluid body-dark" id="competitions">
+        <h1>First Robotics Competition</h1>
+        <div class="row">
+            <div class="col-md-12 col-lg-4">
+                <div class="card">
+                    <div class="view">
+                        <img class="card-img-top" src="assets/1200px-FIRST_Steamworks_Logo.svg.png">
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">2017</h4>
+                        <button class="btn btn-outline-red waves-effect kickoff"><a href="https://www.youtube.com/watch?v=EMiNmJW7enI" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-4">
+                <div class="card">
+                    <div class="view">
+                        <img class="card-img-top powerup" src="assets/1200px-2018_FIRST_Power_Up_game_logo.svg.png">
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">2018</h4>
+                        <button class="btn btn-outline-red waves-effect kickoff"><a href="https://www.youtube.com/watch?v=HZbdwYiCY74" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-4">
+                <div class="card">
+                    <div class="view">
+                        <img class="card-img-top" src="assets/FIRST-DestDeepSpace-logo_full-color-sponsor-350.png">
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">2019</h4>
+                        <button class="btn btn-outline-red waves-effect kickoff"><a href=""><i class="fa fa-youtube-play" aria-hidden="true"></i> Coming Soon</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
