--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -14,12 +14,10 @@
     <link href="../css/mdb.min.css" rel="stylesheet">
     <!-- Custom Styles -->
     <link href="../css/main.css" rel="stylesheet">
-
-    <!-- GSuite Verification. DO NOT DELETE!!! -->
-    <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI">
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-md">
         <img class="navbar-brand" src="../assets/banner-trans.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu">
@@ -37,27 +35,41 @@
                     <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Our Team</a>
+                    <a class="nav-link" href="team.html">Our Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sponsors</a>
+                    <a class="nav-link" href="sponsors.html">Sponsors</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Calender</a>
+                    <a class="nav-link" href="calendar.html">Calendar</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-sm btn-yellow"><a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics"><i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a></button>
+                    <button type="button" class="btn btn-sm btn-yellow">
+                        <a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics">
+                            <i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a>
+                    </button>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Calender -->
-    <div class="container calender">
-        <iframe width="95%" height="550vw" class="image" src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&amp;ctz=America%2FLos_Angeles"
-            frameborder="0" scrolling="no" style="border: 0">
-        </iframe>
+    <div class="body-dark">
+        <h1>Thank You to Our Sponsors!</h1>
+        <img src="../assets/Dow_Chemical_Company_logo.svg.png">
     </div>
+
+
+
+
+    <!-- SCRIPTS -->
+    <!-- JQuery -->
+    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="../js/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="../js/mdb.min.js"></script>
 </body>
 
 </html>
