--- a/pages/team.html
+++ b/pages/team.html
@@ -38,10 +38,10 @@
                     <a class="nav-link" href="team.html">Our Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sponsors</a>
+                    <a class="nav-link" href="sponsors.html">Sponsors</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="calender.html">Calender</a>
+                    <a class="nav-link" href="calendar.html">Calendar</a>
                 </li>
                 <li class="nav-item">
                     <button type="button" class="btn btn-sm btn-yellow">
