Resized images for consistency and structured sponsors page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </nav>
 
     <!-- Light Body -->
+    <!-- About -->
     <div class="container-fluid body-light">
         <!-- Jumbotron -->
         <div class="jumbotron jumbotron-fluid">
@@ -65,15 +66,17 @@
                     introduced to possible career choices in STEM, such as computer science and engineering. We will put
                     our absolute best effort into climbing the ranks at the UC Davis competition and other competitions in
                     the future. NexGen will strive for success and NexGen will work to be the best of the Next Generation.</p>
-                <button class="btn btn-primary btn-rounded">
-                    <a href="#competitions">
-                        <i class="fa fa-chevron-down" aria-hidden="true"></i> See Our Robots</a>
-                </button>
+                <a href="#competitions">
+                    <button class="btn btn-primary btn-rounded">
+                        <i class="fa fa-chevron-down" aria-hidden="true"></i> See Our Robots
+                    </button>
+                </a>
             </div>
         </div>
     </div>
 
     <!-- Light Body -->
+    <!-- Carousel -->
     <div class="container-fluid body-light">
 
         <!-- Carousel -->
@@ -87,10 +90,10 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/Article.jpg" alt="working picture">
+                            <img class="d-block w-100" src="assets/article-resized.jpg" alt="working picture">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/OurTeam.jpg" alt="group photo">
+                            <img class="d-block w-100" src="assets/ourteam-resized.jpg" alt="group photo">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#mainCarousel" role="button" data-slide="prev">
@@ -114,33 +117,41 @@
             <div class="col-md-12 col-lg-4">
                 <div class="card">
                     <div class="view">
-                        <img class="card-img-top" src="assets/1200px-FIRST_Steamworks_Logo.svg.png">
+                        <img class="card-img-top" src="assets/steamworks-1200px.png">
                     </div>
                     <div class="card-body">
                         <h4 class="card-title">2017</h4>
-                        <button class="btn btn-outline-red waves-effect kickoff"><a href="https://www.youtube.com/watch?v=EMiNmJW7enI" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a></button>
+                        <button class="btn btn-outline-red waves-effect kickoff">
+                            <a href="https://www.youtube.com/watch?v=EMiNmJW7enI" target="_blank">
+                                <i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a>
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="col-md-12 col-lg-4">
                 <div class="card">
                     <div class="view">
-                        <img class="card-img-top powerup" src="assets/1200px-2018_FIRST_Power_Up_game_logo.svg.png">
+                        <img class="card-img-top powerup" src="assets/powerup-1200px.png">
                     </div>
                     <div class="card-body">
                         <h4 class="card-title">2018</h4>
-                        <button class="btn btn-outline-red waves-effect kickoff"><a href="https://www.youtube.com/watch?v=HZbdwYiCY74" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a></button>
+                        <button class="btn btn-outline-red waves-effect kickoff">
+                            <a href="https://www.youtube.com/watch?v=HZbdwYiCY74" target="_blank">
+                                <i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a>
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="col-md-12 col-lg-4">
                 <div class="card">
                     <div class="view">
-                        <img class="card-img-top" src="assets/FIRST-DestDeepSpace-logo_full-color-sponsor-350.png">
+                        <img class="card-img-top" src="assets/deepspace-1200px.jpg">
                     </div>
                     <div class="card-body">
                         <h4 class="card-title">2019</h4>
-                        <button class="btn btn-outline-red waves-effect kickoff"><a href=""><i class="fa fa-youtube-play" aria-hidden="true"></i> Coming Soon</a></button>
+                        <button class="btn btn-outline-red waves-effect kickoff">
+                            <a href="#">Coming Soon</a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -148,6 +159,11 @@
 
     </div>
 
+    <div class="container-fluid">
+        <footer>
+
+        </footer>
+    </div>
 
 
 
