--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -53,9 +53,16 @@
         </div>
     </nav>
 
+    <!-- Sponsor Images/Links -->
     <div class="body-dark">
         <h1>Thank You to Our Sponsors!</h1>
-        <img src="../assets/Dow_Chemical_Company_logo.svg.png">
+        <h3>If you or your organization are interested in supporting us, please contact us at <b>business@dvhsrobotics.org</b>.</h3>
+        <hr>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+                <a href="https://www.dow.com/en-us/about-dow/locations/pittsburg"><img class="img-fluid" src="../assets/Dow_Chemical_Company_logo.svg.png"></a>
+            </div>
+        </div>
     </div>
 
 
